backend/gate/envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  clusters:
    - connect_timeout: 1s
      lb_policy: round_robin
      load_assignment:
        cluster_name: thresh_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: thresh
                      port_value: 8080
      name: thresh_cluster
      type: logical_dns

    - connect_timeout: 1s
      lb_policy: round_robin
      load_assignment:
        cluster_name: darius_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: darius
                      port_value: 8080
      name: darius_cluster
      type: logical_dns

    - connect_timeout: 1s
      http2_protocol_options: {}
      lb_policy: round_robin
      load_assignment:
        cluster_name: bulbasaur_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: bulbasaur
                      port_value: 8080
      name: bulbasaur_cluster
      type: logical_dns

    - connect_timeout: 1s
      lb_policy: round_robin
      load_assignment:
        cluster_name: bulbasaur_http_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: bulbasaur
                      port_value: 8081
      name: bulbasaur_http_cluster
      type: logical_dns

    - connect_timeout: 1s
      http2_protocol_options: {}
      lb_policy: round_robin
      load_assignment:
        cluster_name: ekko_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ekko
                      port_value: 8080
      name: ekko_cluster
      type: logical_dns

    - connect_timeout: 1s
      lb_policy: round_robin
      load_assignment:
        cluster_name: ekko_http_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ekko
                      port_value: 8081
      name: ekko_http_cluster
      type: logical_dns

  listeners:
    - name: listener_websocket
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8088
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                http2_protocol_options:
                  allow_connect: true
                upgrade_configs:
                  - upgrade_type: websocket
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      log_format:
                        json_format:
                          authority: "%REQ(:AUTHORITY)%"
                          bytes_received: "%BYTES_RECEIVED%"
                          bytes_sent: "%BYTES_SENT%"
                          duration: "%DURATION%"
                          grpc_status: "%GRPC_STATUS%"
                          method: "%REQ(:METHOD)%"
                          path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                          protocol: "%PROTOCOL%"
                          response_code: "%RESPONSE_CODE%"
                          response_code_details: "%RESPONSE_CODE_DETAILS%"
                          response_flags: "%RESPONSE_FLAGS%"
                          start_time: "%START_TIME%"
                          upstream_host: "%UPSTREAM_HOST%"
                          user_agent: "%REQ(USER-AGENT)%"
                          x_envoy_external_address: "%REQ(X-ENVOY-EXTERNAL-ADDRESS)%"
                          x_envoy_upstream_service_time: "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%"
                          x_forwarded_for: "%REQ(X-FORWARDED-FOR)%"
                          x_request_id: "%REQ(X-REQUEST-ID)%"
                      path: /dev/stdout
                codec_type: auto
                stat_prefix: ingress_http
                use_remote_address: true
                xff_num_trusted_hops: 1
                http_filters:
                  - name: envoy.filters.http.lua
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                      inline_code: |-
                        function envoy_on_request(request_handle)
                          request_handle:headers():add("x-tenant-id", "CLIENT")
                        end
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.grpc_stats
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
                      stats_for_all_methods: true
                      enable_upstream_stats: true
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.health_check
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.health_check.v3.HealthCheck
                      headers:
                        - exact_match: /status
                          name: :path
                      pass_through_mode: false
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      grpc_service:
                        envoy_grpc:
                          cluster_name: bulbasaur_cluster
                        timeout: 5s
                      transport_api_version: V3
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      cors:
                        allow_headers: authorization,keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,x-language,x-custom-headers,connect-protocol-version,x-safe-id
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_origin_string_match:
                          - prefix: "*"
                        expose_headers: grpc-status,grpc-message
                        max_age: "1728000"
                      request_headers_to_add:
                        - append: true
                          header:
                            key: x-forwarded-for
                            value: "%REQ(X-FORWARDED-FOR)%"
                        - append: true
                          header:
                            key: user-agent
                            value: "%REQ(USER-AGENT)%"
                      response_headers_to_add:
                        - append: false
                          header:
                            key: x-request-id
                            value: "%REQ(X-REQUEST-ID)%"
                      routes:
                        # - match:
                        #     prefix: /ws
                        #   route:
                        #     prefix_rewrite: /
                        #     cluster: soybean_http_cluster
                        #   typed_per_filter_config:
                        #     envoy.filters.http.ext_authz:
                        #       "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                        #       disabled: true
    - name: listener_main
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8081
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                route_config:
                  name: local_route
                  virtual_hosts:
                    - cors:
                        allow_headers: authorization,keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,x-language,x-custom-headers,connect-protocol-version
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_origin_string_match:
                          - prefix: "*"
                        expose_headers: grpc-status,grpc-message
                        max_age: "1728000"
                      domains:
                        - "*"
                      name: cms_service
                      routes:
                        - match:
                            prefix: /thresh/
                          route:
                            cluster: thresh_cluster
                            prefix_rewrite: /
                            timeout: 60s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match:
                            prefix: /bulbasaur.Bulbasaur
                          route:
                            cluster: bulbasaur_cluster
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match:
                            prefix: /bulbasaur/
                          route:
                            cluster: bulbasaur_http_cluster
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match:
                            prefix: /bulbasaur.Ivysaur
                          route:
                            cluster: bulbasaur_cluster
                        - match:
                            prefix: /ivysaur/
                          route:
                            cluster: bulbasaur_http_cluster
                        - match:
                            prefix: /ekko.Chronobreak
                          route:
                            cluster: ekko_cluster
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match:
                            prefix: /ekko.Ekko
                          route:
                            cluster: ekko_cluster
                        - match:
                            prefix: /ekko
                          route:
                            cluster: ekko_http_cluster
                            timeout: 60s
                        - match:
                            prefix: /chronobreak
                          route:
                            cluster: ekko_http_cluster
                            timeout: 60s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match:
                            prefix: /darius/
                          route:
                            cluster: darius_cluster
                            prefix_rewrite: /
                            timeout: 60s
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                http_filters:
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      grpc_service:
                        envoy_grpc:
                          cluster_name: bulbasaur_cluster
                        timeout: 5s
                      transport_api_version: V3
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                stat_prefix: ingress_http
